criado novo ramo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,16 @@
     },
     "[python]": {
         "editor.formatOnSave": true,
-    }
+    },
+    "cSpell.words": [
+        "manuten",
+        "manutenção",
+        "modifica",
+        "modificação",
+        "o",
+        "porque",
+        "quest",
+        "questão"
+    ]
 
 }
